feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -1,5 +1,3 @@
-% PD1
-
 @book{bass2012software,
   title={Software Architecture in Practice},
   author={Bass, L. and Clements, P. and Kazman, R.},
@@ -48,7 +46,6 @@
   title  = {Bounded Context},
   year   = {2014}
 }
-% SDI
 
 @misc{cap,
   title        = {Definicja twierdzenia "{CAP}"},
@@ -173,4 +170,24 @@
 @misc{remix,
   title        = {Strona internetowa biblioteki Remix},
   howpublished = {Dostęp zdalny (16.12.2023): \url{https://remix.run}}
+}
+
+@misc{gradle,
+  title        = {Strona internetowa systemu budowania Gradle},
+  howpublished = {Dostęp zdalny (17.12.2023): \url{https://gradle.org}}
+}
+
+@misc{detekt,
+  title        = {Strona internetowa narzędzia do statycznej analizy kodu w języku Kotlin - detekt},
+  howpublished = {Dostęp zdalny (17.12.2023): \url{https://detekt.dev}}
+}
+
+@misc{ghcr,
+  title        = {Dokumentacja usługi GitHub Container Registry},
+  howpublished = {Dostęp zdalny (17.12.2023): \url{https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry}}
+}
+
+@misc{gaa,
+  title        = {Dokumentacja usługi GitHub Actions Artifacts},
+  howpublished = {Dostęp zdalny (17.12.2023): \url{https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts}}
 }
