feat(thesis): WIP thesis

--- a/docs/thesis/tex/6-wdrozenie.tex
+++ b/docs/thesis/tex/6-wdrozenie.tex
@@ -32,7 +32,11 @@ Aby zapewnić możliwość uruchomienia dowolnego elementu systemu, należy zadb
 
 Wdrażanie systemów mikroserwisowych z wykorzystaniem Docker i Kubernetes stało się standardem w rozwoju nowoczesnych aplikacji webowych. Docker umożliwia tworzenie lekkich, przenośnych kontenerów dla każdego mikroserwisu, zapewniając izolację i spójność środowiska. Kontenery Docker mogą być następnie zarządzane i orkiestrowane za pomocą Kubernetes, platformy umożliwiającej automatyczne skalowanie, podział ruchu  i samonaprawę. Kubernetes zapewnia także mechanizmy do zarządzania siecią i komunikacji między kontenerami, co jest kluczowe dla sprawnego działania rozproszonych systemów mikroserwisowych.
 
+TODO Dockerfile
+
 \subsection{Orkiestracja kontenerów}
+
+TODO k8s yaml
 
 \subsection{Skalowanie}
 
@@ -47,3 +51,5 @@ Domyślnie uruchomiono po jednej instancji serwisów obsługujących komendy (Do
 \subsection{Monitorowanie}
 
 logi, axon console, axon server dashboard, prometheus, grafana
+
+TODO screenshot grafany
