--- a/docs/thesis/tex/7-testowanie.tex
+++ b/docs/thesis/tex/7-testowanie.tex
@@ -4,10 +4,20 @@
 
 \subsection{Testy jednostkowe}
 
+TODO snippet
+
 \subsection{Testy integracyjne}
 
+TODO snippet?
+
 \subsection{Testy akceptacyjne}
+
+TODO snippet e2e?
 
 \subsection{Testy wydajnościowe}
 
 Przeprowadzono testy wydajnościowe przy pomocy narzędzia Locust \cite{locust}, które wykazały stabilność systemu, przy obciążeniu na poziomie 265 żądań HTTP na sekundę.
+
+TODO snippet
+
+TODO tabelka z SDI
