feat(thesis): WIP thesis

--- a/docs/thesis/tex/6-wdrozenie.tex
+++ b/docs/thesis/tex/6-wdrozenie.tex
@@ -52,4 +52,4 @@ Domyślnie uruchomiono po jednej instancji serwisów obsługujących komendy (Do
 
 logi, axon console, axon server dashboard, prometheus, grafana
 
-TODO screenshot grafany
+TODO screenshot grafany czy coś
